# 402proto

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: ci.yml  labeler.yml  stale.yml
examples/: README.md  agent-loop.py  claude-with-pay.ts  jupiter-quote.py  mcp-with-claude-code.md  mcp-with-cursor.md  pyth-price-feed.py
mcp-server/: README.md  package.json  tsconfig.json
mcp-server/src/: cli.ts  server.test.ts  server.ts  tools.ts  transport-http.ts  transport.ts
router-rs/: Cargo.toml  README.md
router-rs/src/: catalog.rs  envelope.rs  error.rs  failover.rs  lib.rs  retry.rs  signing.rs
sdk-py/: README.md  pyproject.toml
sdk-py/src/proto402/: __init__.py  cli.py  client.py  config.py  envelope.py  errors.py  retry.py  settle.py  signing.py  types.py
sdk-py/src/proto402/providers/: __init__.py
sdk-py/tests/: test_envelope.py  test_providers.py  test_retry.py  test_settle.py  test_signing.py
sdk-ts/: README.md  package.json  tsconfig.json
sdk-ts/src/: catalog.test.ts  catalog.ts  client.ts  envelope.test.ts  envelope.ts  errors.ts  index.ts  settle.test.ts  settle.ts  signing.ts  types.ts
site/: Dashboard.html  Docs.html  Enterprise.html  Login.html  Platform.html  Pricing.html  Privacy.html  Solution.html  Terms.html  index.html  manifest.json  robots.txt  sitemap.xml  vercel.json
site/.well-known/: security.txt
site/ComingSoon/: index.html
spec/: LICENSE  README.md  envelope.md  errors.md  providers.md  settle.md  signing.md  versioning.md
spec/changes/: 402PIP-01.md  402PIP-02.md  402PIP-03.md  402PIP-04.md  402PIP-05.md  402PIP-06.md  README.md
spec/test-vectors/: README.md  envelope.json  signing.json
