[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "proto402"
version = "0.2.0.dev0"
description = "402proto python client — open payment protocol for paid apis, settled in usdc on solana"
authors = [
    { name = "402proto contributors" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["402", "402proto", "http-402", "payment", "solana", "usdc", "agent", "api", "mcp", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "based58>=0.1.1",
    "PyNaCl>=1.5",
    "eval-type-backport>=0.2.0;python_version<'3.10'",
]

[project.optional-dependencies]
chain = [
    "solders>=0.21",
    "solana>=0.36",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://402proto.xyz"
Repository = "https://github.com/402proto/402proto"
Issues = "https://github.com/402proto/402proto/issues"
Changelog = "https://github.com/402proto/402proto/blob/main/CHANGELOG.md"

[project.scripts]
"402proto" = "proto402.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/proto402"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/proto402/*" = ["UP045", "UP007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
